<resources>
    <string name="app_name">ETDemoProject</string>
    <string name="fullAddress">%1$s\'%2$s\n%3$s\'%4$s\n</string>
    <string name="companyDetails">%1$s\n%2$s\n%3$s</string>
    <string name="users">Users</string>
    <string name="posts">Posts</string>
    <string name="albums">Albums</string>
    <string name="albumId">%1s Album#:%2s</string>
    <string name="userShareMsg">Hello, my name is %1s.\n You can find my information in the link below:\n</string>
    <string name="postShareMsg">This is post \"%1s\".\nYou can check it in the link below:\n</string>
    <string name="albumShareMsg">This is Album \"%1s\".\n\nYou can check it in the link below:\n</string>

    <string name="password_hint">Password</string>
    <string name="login_button">Login</string>
    <string name="sign_up_question">Don\'t have an account?</string>
    <string name="sign_up"><u>Sign up!</u></string>
    <string name="signUp_username_hint">Username</string>
    <string name="sign_up_button">Sign Up</string>
    <string name="email_hint">Email</string>
    <string name="rePassword_hint">Re-enter Password</string>
    <string name="login_question">Already Have An Account?</string>
    <string name="login"><u>Log in!</u></string>
    <string name="name_hint">Full Name</string>
    <string name="welcome_phrase">WELCOME TO ETDEMO</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="notifications">Notifications</string>
    <string name="logout">Log Out</string>
    <string name="close">Close</string>
    <string name="start">Start</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="account_settings">Account Settings</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="default_notification_channel_id">channel_id</string>
    <string name="token_msg">User token: </string>
    <string name="snackBar_text">User Deleted.</string>
    <string name="snackBar_action_text">Undo</string>
    <string name="tab_album">Albums</string>
    <string name="tab_user">Users</string>
    <string name="tab_post">Posts</string>
    <string name="add_a_post">Add a Post</string>
    <string name="add_an_album">Add an Album</string>
    <string name="add_a_user">Add a User</string>


</resources>

