<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/menu_top">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_icon"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile_icon"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/ic_notifications_none_icon"
            android:title="@string/notifications" />
    </group>

    <item android:title="@string/account_settings">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/logout_icon"
                android:title="@string/logout" />
        </menu>
    </item>
    
</menu>