<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_collapseMode="pin"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/AppTheme.PopupOverlay" />


    </com.google.android.material.appbar.AppBarLayout>

    <FrameLayout
        android:id="@+id/nav_drawer_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />


    <LinearLayout
        android:id="@+id/fabLayout_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:clipToPadding="false"
        android:gravity="center_vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/fab_label_border"
            android:padding="3dp"
            android:text="@string/add_a_user"
            android:textColor="@color/colorWhite" />


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:src="@drawable/ic_users_icon"
            android:tint="@color/colorWhite"
            app:fabSize="mini" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/fabLayout_album"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:clipToPadding="false"
        android:gravity="center_vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/fab_label_border"
            android:padding="3dp"
            android:text="@string/add_an_album"
            android:textColor="@color/colorWhite" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_album"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:src="@drawable/ic_album_icon"
            android:tint="@color/colorWhite"
            app:fabSize="mini" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/fabLayout_post"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:clipToPadding="false"
        android:gravity="center_vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/fab_label_border"
            android:padding="3dp"
            android:text="@string/add_a_post"
            android:textColor="@color/colorWhite" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_post"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:src="@drawable/ic_posts_icon"
            android:tint="@color/colorWhite"
            app:fabSize="mini" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="10dp"
        android:clipToPadding="false"
        android:gravity="center_vertical">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:src="@drawable/ic_plus_icon" />
    </LinearLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>